# billion-row-gen

./: Cargo.toml  README.md
src/: main.rs
